# chromatic_cognition_system

./: .gitignore  AGENTS.md  Cargo.toml  MERGE_STATUS.md  PHASE_3_COMPLETE.md  README.md  SESSION_1_COMPLETE.md
chromatic_core/: .gitignore  AGENTS.md  ANALYSIS_METHODOLOGY.md  CHANGELOG.md  CHRONICLE_SPEC.md  COMPREHENSIVE_CODE_ANALYSIS.md  CONTINUITY_CONTROL_REPORT.md  CRITICAL_BUG_FIXES_COMPLETE.md  Cargo.toml  DASE_INTEGRATION_SUMMARY.md  DIAGNOSTICS_SPEC.md  DREAM_POOL_IMPLEMENTATION_SUMMARY.md  DREAM_POOL_VALIDATION_RESULTS.md  Dream Pool Specification (Refined).md  Dreamer–Learner Interface Specification.md  ERROR_HANDLING_PROGRESS.md  LEARNER MANIFEST v1.md  LEARNER_IMPLEMENTATION.md  LEARNER_MVP_SUMMARY.md  OPTION_B_PROGRESS.md  PHASE5_REPORT.md  PHASE6D_INTEGRATION_LOG.md  PHASE6D_VALIDATION_REPORT.md  PHASE_3B_PLAN.md  PHASE_3B_SUMMARY.md  PHASE_3_ARCHIVE_FINALIZATION_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_COMPREHENSIVE_ANALYSIS.md  PHASE_4_OPTIMIZATION_PLAN.md  PHASE_4_OPTIMIZATION_PROGRESS.md  PHASE_4_REMAINING_ISSUES.md  PHASE_4_STATUS.md  PHASE_7_COGNITIVE_INTEGRATION_COMPLETE.md  PHASE_7_SPECIFICATION.md  PROJECT_AUDIT.md  Phase 4 — Continuous Embedding _ Soft Indexing (Spec v1).md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  Resolution of Critical Concerns.md  (+16 more)
chromatic_core/benches/: dream_benchmarks.rs
chromatic_core/config/: bridge.toml  engine.toml
chromatic_core/docs/: API.md  ARCHITECTURE.md  BENCHMARK_BASELINE.txt  BUILD_AND_PACKAGING.md  DASE_INTEGRATION_ANALYSIS.md  DREAM_POOL_EVALUATION.md  NEURAL_NETWORK_DESIGN.md  PHASE4_MEMORY_HNSW_AUDIT.md  QUICKSTART.md  RESEARCH_RESULTS.md  TEST_REPORT.md
chromatic_core/examples/: csi_demo.rs  demo.rs  dream_validation.rs  dream_validation_full.rs  learner_validation.rs  phase_3b_validation.rs  solver_demo.rs  train_color_classifier.rs
chromatic_core/scripts/: build_release.sh
chromatic_core/src/: checkpoint.rs  config.rs  csi_integration.rs  lib.rs  logging.rs  training.rs
chromatic_core/src/bridge/: mod.rs  modality_map.rs  modality_ums.rs
chromatic_core/src/data/: color_dataset.rs  mod.rs  pattern.rs
chromatic_core/src/diagnostics/: chromatic_spiral.wgsl  gpu.rs  mod.rs
chromatic_core/src/dream/: analysis.rs  bias.rs  diversity.rs  embedding.rs  error.rs  experiment.rs  hnsw_index.rs  hybrid_scoring.rs  memory.rs  mod.rs  prelude.rs  query_cache.rs  retrieval_mode.rs  simple_pool.rs  soft_index.rs
chromatic_core/src/dream/tests/: mod.rs
chromatic_core/src/learner/: classifier.rs  feedback.rs  mod.rs  training.rs
chromatic_core/src/meta/: adapter.rs  awareness.rs  continuity.rs  diagnostics.rs  dissonance.rs  ethics.rs  log.rs  mod.rs  predict.rs  reflection.rs  trend.rs
chromatic_core/src/neural/: gradient.rs  layer.rs  loss.rs  mod.rs  network.rs  optimizer.rs
chromatic_core/src/solver/: mod.rs  native.rs
chromatic_core/src/spectral/: accumulate.rs  bridge.rs  color.rs  fft.rs  mod.rs
chromatic_core/src/tensor/: chromatic_tensor.rs  gradient.rs  mod.rs  operations.rs
chromatic_core/tests/: operations.rs  validation_harness.rs
chromatic_shared/: Cargo.toml
chromatic_shared/shaders/: csi_spiral.wgsl
chromatic_shared/src/: lib.rs
chromatic_shared/src/csi/: interpreter.rs  metrics.rs  mod.rs
wgsl_trainer/: Cargo.toml  TRAINING_EXECUTION_SUMMARY.md  TRAINING_SCAFFOLD_STATUS.md
wgsl_trainer/docs/: BACKPROPAGATION_EXPLANATION.md
wgsl_trainer/src/: main.rs
wgsl_trainer/src/training/: mod.rs
