[workspace]
members = [
    "chromatic_core",
    "wgsl_trainer",
    "chromatic_shared"
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Chromatic Cognition Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core array operations
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-rand = "0.14"
rayon = "1.8"

# GPU and WGSL support
wgpu = "0.19"
naga = { version = "0.19", features = ["wgsl-in"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Signal processing (spectral bridge)
rustfft = "6.2"

# Semantic search (Dream Pool)
hnsw_rs = "0.3"
lru = "0.12"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
rand_chacha = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

# Visualization
plotters = "0.3"
half = { version = "2.0", features = ["serde"] }

# Text processing
regex = "1.10"
unicode-segmentation = "1.12"

[workspace.dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"

# [patch.crates-io]
# tracing = { path = "chromatic_core/vendor/tracing_stub" }
