[package]
name = "chromatic_shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types and utilities for Chromatic Cognition System"

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wgpu = { workspace = true }
naga = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
